fixing pre tag to wrap text instead of creating a horizontol scroll

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,7 +15,9 @@
  */
 
  pre{
+   width: 95%
    color: #fff;
+   white-space: pre-wrap;
  }
  .container{
   width: 70%;
